# trustlink-pay

./: .gitignore  README.md  package.json
backend/: .env copy.local  .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
backend/app/: layout.tsx
backend/app/blockchain/: solana-core.ts  solana-payments.ts  solana.ts  trustlink-pay-v3.ts
backend/app/config/: escrow.ts
backend/app/controllers/: authenticated-route.ts
backend/app/db/: autoclaim-jobs.ts  client.ts  payment-columns.ts  payment-trace.ts  payments-read.ts  payments-write.ts  payments.ts  phone-verifications.ts  receiver-wallets.ts  schema.sql  users.ts  whatsapp-webhook-events.ts
backend/app/lib/: app-url.ts  auth.ts  cors.ts  env.ts  http.ts  logger.ts  phone-identity.ts  privacy-keys.ts  redis.ts  request.ts  session-codes.ts  session-events.ts  validation.ts
backend/app/services/: auth.ts  identity-binding.ts  payment-views.ts  payments.ts  phone-identity.ts  (+8 more)
backend/programs/trustlink-escrow/: Cargo.toml  README.md
backend/programs/trustlink-escrow/src/: error.rs  lib.rs  state.rs  v3.rs  v3_state.rs
backend/scripts/: autoclaim-worker.ts  expire-payments-to-pool.ts  init-db.ts  init-escrow-config.ts  reset-db.ts  test-auth-phone-flow.ts  test-identity-binding.ts  test-payment-flow.ts  test-recipient-lookup.ts  test-redis-connection.js  test-tins-phase1.ts  test-whatsapp-number.ts  update-escrow-config.ts
backend/tests/: trustlink-escrow.ts
docs/: authentication-guide.md  deployment.md  devnet-testing.md  escrow-design.md  escrow-v2-design.md  payment-escrow-architecture.md  wallet-roles.md  whatsapp-auth-flow.md
frontend/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
public/: README.md
tins-sdk/: README.md  package.json
tins-sdk/src/: index.ts
transfer-identity-number-system-(TINS)/: README.md
transfer-identity-number-system-(TINS)/docs/: phase-1-scope.md  tins-change-log.md
transfer-identity-number-system-(TINS)/program/: Cargo.toml
transfer-identity-number-system-(TINS)/program/src/: cpi.rs  entrypoint.rs  error.rs  instruction_auto.rs  lib.rs  processor.rs  state.rs  utils.rs
transfer-identity-number-system-(TINS)/program/src/processor/: claim_escrow.rs  create.rs  create_escrow.rs  create_reverse.rs  create_split_v2.rs  create_with_nft.rs  init_program.rs  initialize_identity.rs
transfer-identity-number-system-(TINS)/program/tests/common/: nft.rs  utils.rs
(+166 files in other folders)
