[package]
name = "sns-registrar"
version = "0.1.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"
repository = "https://github.com/SolanaNameService/sns-registrar"
description = "This on-chain Solana program handles SNS domain registrations"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
no-referrer-check = []
no-special-discount-fee = []
devnet = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
solana-program = "2.2.1"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.10.3"
thiserror = "1.0.24"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "7.0.0"
bonfida-utils = "0.7.0"
spl-name-service = { package = "spl-name-service-2", version = "0.4.0", features = [
    "no-entrypoint",
] }
mpl-token-metadata = { version = "5.1.1" }
unicode-segmentation = "1.10.1"
phf = { version = "0.10", features = ["macros"] }
solana-security-txt = "1.1.1"


[dev-dependencies]
solana-program-test = "2.2.1"
tokio = { version = "1.0", features = ["macros"] }
futures = "0.3"
solana-sdk = "2.2.1"
spl-associated-token-account = "7.0.0"
random-string = "1.0.0"
bytemuck = "1.13.0"
serde = "1.0.198"
base64 = "0.22.0"
serde_json = "1.0.116"
bincode = "1.3.3"
pyth-solana-receiver-sdk = "0.6.1"

[lib]
crate-type = ["cdylib", "lib"]
