[package]
name = "tins-program"
version = "0.1.0"
authors = ["TrustLink Pay"]
edition = "2018"
repository = "https://github.com/trustlink-pay/tins"
description = "Transfer Identity Number System on-chain program"
license = "MIT"

[features]
no-entrypoint = []
test-bpf = []
devnet = []

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
solana-program = "2.2.1"
num-traits = "0.2.14"
num-derive = "0.3.3"
borsh = "0.10.3"
thiserror = "1.0.24"

[lib]
crate-type = ["cdylib", "lib"]
