[package]
name = "trustlink_escrow"
version = "0.1.0"
description = "TrustLink escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trustlink_escrow"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"
